@@ -1,103 +1,44 @@
 package com.example.Trading;
 
 import com.example.Trading.constants.StringConstants;
-import com.example.Trading.dto.OrderDto;
-import com.example.Trading.dto.OrderType;
-import com.example.Trading.dto.UpdatedPriceDto;
+import com.example.Trading.dto.*;
 import com.example.Trading.entity.Order;
+import com.example.Trading.entity.Trade;
 import com.example.Trading.repository.OrderRepository;
+import com.example.Trading.repository.TradeRepository;
 import com.example.Trading.service.StockOrderSystemService;
 import com.example.Trading.service.StockOrderSystemServiceImpl;
-import org.junit.Assert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
+import java.lang.reflect.Field;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 public class StockOrderSystemServiceTest {
 
     @Mock
     private OrderRepository orderRepository;
-
+    @Mock
+    private TradeRepository tradeRepository;
 
     private StockOrderSystemService stockOrderService;
+
+    private Order mockOrder;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.initMocks(this);
-        stockOrderService = new StockOrderSystemServiceImpl(orderRepository, null);
-    }
-
-    @Test
-    public void testAddOrderValid() {
-        OrderDto orderDto = new OrderDto();
-        orderDto.setStockSymbol("ABCDEF1234");
-        orderDto.setOrderType(OrderType.BUY);
-        orderDto.setPrice(50.0);
-        orderDto.setQuantity(20);
-        orderDto.setStatus("PENDING");
-
-        Order mockSavedOrder = new Order();
-        mockSavedOrder.setId(1L);
-        mockSavedOrder.setStockSymbol(orderDto.getStockSymbol());
-        mockSavedOrder.setOrderType(orderDto.getOrderType());
-        mockSavedOrder.setPrice(orderDto.getPrice());
-        mockSavedOrder.setQuantity(orderDto.getQuantity());
-        mockSavedOrder.setStatus(orderDto.getStatus());
-        mockSavedOrder.setTimestamp(LocalDateTime.now());
-
-        when(orderRepository.save(any(Order.class))).thenReturn(mockSavedOrder);
-
-        Order savedOrder = stockOrderService.addOrder(orderDto);
-
-        assertEquals(mockSavedOrder, savedOrder);
-    }
-
-    @Test
-    public void testExecuteOrders() {
-        // Mock buy and sell orders
-        List<Order> buyOrders = new ArrayList<>();
-        List<Order> sellOrders = new ArrayList<>();
-
-
-        // Add mock buy and sell orders to the lists
-
-        when(orderRepository.findBuyOrders()).thenReturn(buyOrders);
-        when(orderRepository.findSellOrders()).thenReturn(sellOrders);
-
-        // Mock user objects
-
-
-        // Create mock buy and sell orders and associate them with users
-        Order buyOrder = createMockOrder("TECHM", 10.0, StringConstants.PENDING, 10);
-        Order sellOrder = createMockOrder("TECHM", 9.0, StringConstants.PENDING, 15);
-
-        // Add the buy and sell orders to the respective lists
-        buyOrders.add(buyOrder);
-        sellOrders.add(sellOrder);
-
-
-        // Call the executeOrders method
-        stockOrderService.matchOrder();
-
-        // Verify that expected methods were called
-        verify(orderRepository).findBuyOrders();
-        verify(orderRepository).findSellOrders();
-
-        // Assert that your business logic works correctly
-        assertEquals(0, buyOrder.getQuantity());
-        assertEquals(5, sellOrder.getQuantity());
+        stockOrderService = new StockOrderSystemServiceImpl(orderRepository, tradeRepository);
+        mockOrder = createMockOrder("ABC", 10.0, StringConstants.PENDING, 10);
     }
 
     // Helper method to create a mock order
@@ -109,29 +50,107 @@ public class StockOrderSystemServiceTest {
         order.setQuantity(quantity);
         return order;
     }
+
+    @Test
+    public void testAddOrderValid() {
+        OrderDto orderDto = new OrderDto();
+        orderDto.setStockSymbol("ABC");
+        orderDto.setOrderType(OrderType.BUY);
+        orderDto.setPrice(10.0);
+        orderDto.setQuantity(5);
+
+        Order mockSavedOrder = createMockOrder("ABC", 10.0, StringConstants.PENDING, 5);
+        when(orderRepository.save(any(Order.class))).thenReturn(mockSavedOrder);
+
+        Order savedOrder = stockOrderService.addOrder(orderDto);
+        assertEquals(mockSavedOrder, savedOrder);
+    }
+
     @Test
     public void testUpdatePriceSuccess() {
         OrderDto request = new OrderDto();
-        request.setStockSymbol("BAJAJ");
+        request.setStockSymbol("ABC");
         request.setPrice(100.0);
 
-        Order order = new Order();
-        order.setStockSymbol("BAJAJ");
+        Order mockOrder = createMockOrder("ABC", 10.0, StringConstants.PENDING, 10);
+
         UpdatedPriceDto expectedResponse = new UpdatedPriceDto();
         expectedResponse.setInfoMsg("Successfully Updated");
-        expectedResponse.setStockSymbol("BAJAJ");
+        expectedResponse.setStockSymbol("ABC");
         expectedResponse.setPrice(100.0);
-        System.out.println("The expectedResp " + expectedResponse);
 
-        Mockito.when(orderRepository.findByStockSymbol("BAJAJ")).thenReturn(Collections.singletonList(order));
-        Mockito.when(orderRepository.save(order)).thenReturn(order);
+        when(orderRepository.findByStockSymbol("ABC")).thenReturn(List.of(mockOrder));
+        when(orderRepository.save(mockOrder)).thenReturn(mockOrder);
 
         UpdatedPriceDto response = stockOrderService.updatePrice(request);
-        System.out.println("UpdatedPrice Response " + response);
+        assertEquals(expectedResponse, response);
+    }
 
-        Assert.assertEquals(expectedResponse, response);
+
+    @Test
+    void testGetPortfolio() {
+        // Mock the behavior of orderRepository.findAll()
+        when(orderRepository.findAll()).thenReturn(List.of(mockOrder));
+
+        List<PortfolioDto> portfolioDtoList = stockOrderService.getPortfolio();
+
+        assertEquals(1, portfolioDtoList.size());
+
+        PortfolioDto portfolioDto = portfolioDtoList.get(0);
+        assertEquals("ABC", portfolioDto.getStockSymbol());
+        assertEquals(10, portfolioDto.getQuantity());
+        assertEquals(StringConstants.PENDING, portfolioDto.getOrderStatus());
+    }
+
+    @Test
+    public void testGetTradeHistory() {
+        List<Trade> sampleTrades = Arrays.asList(
+                createSampleTrade("AAPL", OrderType.BUY, 150.0, 100),
+                createSampleTrade("GOOGL", OrderType.SELL, 2500.0, 50)
+        );
+
+        when(tradeRepository.findAll()).thenReturn(sampleTrades);
+
+        List<TradeDto> tradeHistory = stockOrderService.getTradeHistory();
+
+        assertEquals(sampleTrades.size(), tradeHistory.size());
+    }
+
+    @Test
+    public void testExecuteOrders() throws NoSuchFieldException, IllegalAccessException {
+        List<Order> buyOrders = new ArrayList<>();
+        List<Order> sellOrders = new ArrayList<>();
+
+        when(orderRepository.findBuyOrders()).thenReturn(buyOrders);
+        when(orderRepository.findSellOrders()).thenReturn(sellOrders);
+
+        // Create mock buy and sell orders and add them to the respective lists
+        Order buyOrder = createMockOrder("ABC", 10.0, StringConstants.PENDING, 10);
+        Order sellOrder = createMockOrder("ABC", 9.0, StringConstants.PENDING, 15);
+        buyOrders.add(buyOrder);
+        sellOrders.add(sellOrder);
+
+        Field additionalValueField = StockOrderSystemServiceImpl.class.getDeclaredField("additionalValue");
+        additionalValueField.setAccessible(true);
+        additionalValueField.set(stockOrderService, 1);
+
+        stockOrderService.matchOrder();
+
+        verify(orderRepository).findBuyOrders();
+        verify(orderRepository).findSellOrders();
+
+        assertEquals(0, buyOrder.getQuantity());
+        assertEquals(5, sellOrder.getQuantity());
+    }
+
+
+    private Trade createSampleTrade(String stockSymbol, OrderType orderType, double price, int quantity) {
+        Trade trade = new Trade();
+        trade.setStockSymbol(stockSymbol);
+        trade.setOrderType(orderType);
+        trade.setPrice(price);
+        trade.setQuantity(quantity);
+        trade.setTimestamp(LocalDateTime.now());
+        return trade;
     }
 }
-
-
-
